small refactoring;